--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "build": "vite build",
     "types": "vue-tsc ",
     "serve": "vite preview",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "docs:dev": "vitepress dev vitepress",
+    "docs:build": "vitepress build vitepress",
+    "docs:preview": "vitepress preview vitepress"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -83,6 +86,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
     "vite": "^2.5.4",
+    "vitepress": "^1.3.1",
     "vue-tsc": "^2.0.26"
   },
   "eslintConfig": {
