Deploy vitepress site with github actions

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 node_modules
 
 # Vitepress
-vitepress/.vitepress/cache
+docs/.vitepress/cache
+docs/.vitepress/dist
 
 # Ignore only if we want to publish to packagist
 #/dist
