--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "types": "./dist/index.d.ts",
   "scripts": {
-    "dev": "vite --mode development",
+    "dev": "vite --mode development --port=3000",
     "build": "vite build",
     "types": "vue-tsc ",
     "serve": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "docs:dev": "vitepress dev docs",
+    "docs:dev": "vitepress dev docs --port=5174",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
