--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@tiptap/extension-text-align": "^2.7.4",
     "@tiptap/extension-text-style": "^2.7.4",
     "@tiptap/extension-underline": "^2.7.4",
+    "@tiptap/extension-youtube": "^2.9.1",
     "@tiptap/pm": "^2.7.4",
     "@tiptap/starter-kit": "^2.7.4",
     "@tiptap/suggestion": "^2.7.4",
