--- a/package.json
+++ b/package.json
@@ -21,72 +21,68 @@
     "build": "vite build",
     "types": "vue-tsc ",
     "serve": "vite preview",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "docs:dev": "vitepress dev docs --port=5174",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
-    "@tiptap/extension-blockquote": "^2.11.5",
-    "@tiptap/extension-bold": "^2.11.5",
-    "@tiptap/extension-bubble-menu": "^2.11.5",
-    "@tiptap/extension-bullet-list": "^2.11.5",
-    "@tiptap/extension-code": "^2.11.5",
-    "@tiptap/extension-code-block": "^2.11.5",
-    "@tiptap/extension-color": "^2.11.5",
-    "@tiptap/extension-document": "^2.11.5",
-    "@tiptap/extension-dropcursor": "^2.11.5",
-    "@tiptap/extension-font-family": "^2.11.5",
-    "@tiptap/extension-hard-break": "^2.11.5",
-    "@tiptap/extension-heading": "^2.11.5",
-    "@tiptap/extension-highlight": "^2.11.5",
-    "@tiptap/extension-history": "^2.11.5",
-    "@tiptap/extension-image": "^2.11.5",
-    "@tiptap/extension-italic": "^2.11.5",
-    "@tiptap/extension-link": "^2.11.5",
-    "@tiptap/extension-list-item": "^2.11.5",
-    "@tiptap/extension-mention": "^2.11.5",
-    "@tiptap/extension-ordered-list": "^2.11.5",
-    "@tiptap/extension-paragraph": "^2.11.5",
-    "@tiptap/extension-placeholder": "^2.11.5",
-    "@tiptap/extension-strike": "^2.11.5",
-    "@tiptap/extension-table": "^2.11.5",
-    "@tiptap/extension-table-cell": "^2.11.5",
-    "@tiptap/extension-table-header": "^2.11.5",
-    "@tiptap/extension-table-row": "^2.11.5",
-    "@tiptap/extension-text": "^2.11.5",
-    "@tiptap/extension-text-align": "^2.11.5",
-    "@tiptap/extension-text-style": "^2.11.5",
-    "@tiptap/extension-underline": "^2.11.5",
-    "@tiptap/extension-youtube": "^2.11.5",
-    "@tiptap/pm": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
-    "@tiptap/suggestion": "^2.11.5",
-    "@tiptap/vue-3": "^2.11.5",
-    "material-symbols": "^0.29.1",
-    "sass": "^1.86.0",
+    "@tiptap/extension-blockquote": "^2.14.0",
+    "@tiptap/extension-bold": "^2.14.0",
+    "@tiptap/extension-bubble-menu": "^2.14.0",
+    "@tiptap/extension-bullet-list": "^2.14.0",
+    "@tiptap/extension-code": "^2.14.0",
+    "@tiptap/extension-code-block": "^2.14.0",
+    "@tiptap/extension-color": "^2.14.0",
+    "@tiptap/extension-document": "^2.14.0",
+    "@tiptap/extension-dropcursor": "^2.14.0",
+    "@tiptap/extension-font-family": "^2.14.0",
+    "@tiptap/extension-hard-break": "^2.14.0",
+    "@tiptap/extension-heading": "^2.14.0",
+    "@tiptap/extension-highlight": "^2.14.0",
+    "@tiptap/extension-history": "^2.14.0",
+    "@tiptap/extension-image": "^2.14.0",
+    "@tiptap/extension-italic": "^2.14.0",
+    "@tiptap/extension-link": "^2.14.0",
+    "@tiptap/extension-list-item": "^2.14.0",
+    "@tiptap/extension-mention": "^2.14.0",
+    "@tiptap/extension-ordered-list": "^2.14.0",
+    "@tiptap/extension-paragraph": "^2.14.0",
+    "@tiptap/extension-placeholder": "^2.14.0",
+    "@tiptap/extension-strike": "^2.14.0",
+    "@tiptap/extension-table": "^2.14.0",
+    "@tiptap/extension-table-cell": "^2.14.0",
+    "@tiptap/extension-table-header": "^2.14.0",
+    "@tiptap/extension-table-row": "^2.14.0",
+    "@tiptap/extension-text": "^2.14.0",
+    "@tiptap/extension-text-align": "^2.14.0",
+    "@tiptap/extension-text-style": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
+    "@tiptap/extension-youtube": "^2.14.0",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
+    "@tiptap/suggestion": "^2.14.0",
+    "@tiptap/vue-3": "^2.14.0",
+    "material-symbols": "^0.31.7",
+    "sass": "^1.89.2",
     "tiptap-extension-font-size": "^1.2.0",
-    "tiptap-extension-resize-image": "^1.2.1",
-    "vue": "^3.5.13",
+    "tiptap-extension-resize-image": "^1.2.2",
+    "vue": "^3.5.16",
     "vue-draggable-resizable": "^3.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@types/node": "^20.14.10",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^8.7.1",
-    "fuse.js": "^7.0.0",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@types/node": "^24.0.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.28.0",
+    "eslint-plugin-vue": "^10.2.0",
+    "fuse.js": "^7.1.0",
     "plyr": "^3.7.8",
-    "postcss": "^8.4.47",
-    "sass": "^1.77.4",
+    "postcss": "^8.5.4",
+    "sass": "^1.89.2",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.8",
-    "vitepress": "^1.3.4",
-    "vue-tsc": "^2.1.6"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "vite": "6.3.5",
+    "vue-tsc": "^2.2.10"
   },
   "eslintConfig": {
     "root": true,
